--- a/London_boroughs_data.ipynb
+++ b/London_boroughs_data.ipynb
@@ -45,7 +45,7 @@
    "id": "comparable-ireland",
    "metadata": {},
    "source": [
-    "In this notebook we will use data science along with fourquare venue details to help guide a daunting task a such."
+    "In this notebook we will use data science along with fourquare venue details to help guide a daunting task as such."
    ]
   },
   {
