--- a/London_boroughs_data.ipynb
+++ b/London_boroughs_data.ipynb
@@ -61,7 +61,7 @@
    "id": "given-welcome",
    "metadata": {},
    "source": [
-    "For this project we will scrape London Boroughs from wikipedia https://en.wikipedia.org/wiki/List_of_London_boroughs and relevant crime data from https://en.wikipedia.org/wiki/Crime_in_London and finally download a comprehensive crime list per area from https://data.london.gov.uk/dataset/recorded_crime_summary"
+    "For this project we will scrape London Boroughs from wikipedia https://en.wikipedia.org/wiki/List_of_London_boroughs and relevant homicide crime data from https://en.wikipedia.org/wiki/Crime_in_London in order to sort neighborhoods via homides and also download a comprehensive crime list per area from https://data.london.gov.uk/dataset/recorded_crime_summary to check the mean crime rates per area."
    ]
   },
   {
