--- a/London_boroughs_Intro.ipynb
+++ b/London_boroughs_Intro.ipynb
@@ -37,7 +37,7 @@
    "id": "grateful-overview",
    "metadata": {},
    "source": [
-    "When you want to move in to London the choice can be overwhelming as there are 32 boroughs with hundrends of neighborhoods to choose from. Before you decide on the location, one criterion is to avoid areas with high crime. Once you have selected a low crime area then you would like to examine the venues and facilities availability by each area that complements you lifestyle. From then on you have reached a level of analysis that has narrowed down your options from a hundrent to less than 20! "
+    "When you want to move in to London the choice can be overwhelming as there are 32 boroughs with hundrends of neighborhoods to choose from. Before you decide on the location, one criterion is to avoid areas with high crime. Once you have selected a low crime area then you would like to examine the venues and facilities availability by each area that complements your lifestyle. From then on you have reached a level of analysis that has narrowed down your options from a hundrent to less than 20! "
    ]
   },
   {
