--- a/London_Boroughs.ipynb
+++ b/London_Boroughs.ipynb
@@ -2078,8 +2078,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "CLIENT_ID = '5XWBBBM2DZHOSRVQSFIDZXEMKTYFHDWA3X4QX3ICHSUDQPPN' # your Foursquare ID\n",
-    "CLIENT_SECRET = '43A2WH5RDRILN5P1TON0ZIP10WOY1T2XJKEYODINUEHHLS2G' # your Foursquare Secret\n",
+    "CLIENT_ID = '' # your Foursquare ID\n",
+    "CLIENT_SECRET = '' # your Foursquare Secret\n",
     "VERSION = '20180605' # Foursquare API version\n",
     "LIMIT = 100 # A default Foursquare API limit value\n",
     "RADIUS = 500 # define radius of search"
