--- a/Toronto_Neighbourhoods-clusters.ipynb
+++ b/Toronto_Neighbourhoods-clusters.ipynb
@@ -1125,14 +1125,14 @@
      "output_type": "stream",
      "text": [
       "Your credentails:\n",
-      "CLIENT_ID: 5XWBBBM2DZHOSRVQSFIDZXEMKTYFHDWA3X4QX3ICHSUDQPPN\n",
-      "CLIENT_SECRET:43A2WH5RDRILN5P1TON0ZIP10WOY1T2XJKEYODINUEHHLS2G\n"
+      "CLIENT_ID: \n",
+      "CLIENT_SECRET:\n"
      ]
     }
    ],
    "source": [
-    "CLIENT_ID = '5XWBBBM2DZHOSRVQSFIDZXEMKTYFHDWA3X4QX3ICHSUDQPPN' # your Foursquare ID\n",
-    "CLIENT_SECRET = '43A2WH5RDRILN5P1TON0ZIP10WOY1T2XJKEYODINUEHHLS2G' # your Foursquare Secret\n",
+    "CLIENT_ID = '' # your Foursquare ID\n",
+    "CLIENT_SECRET = '' # your Foursquare Secret\n",
     "VERSION = '20180605' # Foursquare API version\n",
     "LIMIT = 100 # A default Foursquare API limit value\n",
     "\n",
